New property on card to add custom class on the Card and on the Card body New property on card allow any content on card footer

--- a/bootstrap4-components/src/main/resources/resources/bootstrap4-components.properties
+++ b/bootstrap4-components/src/main/resources/resources/bootstrap4-components.properties
@@ -1,23 +1,33 @@
 bootstrap4mix_advancedBreadcrumb.cssClass=Custom Class(es) to set on this breadcrumb
 bootstrap4mix_advancedBreadcrumb=Advanced settings
+bootstrap4mix_advancedCarouselItem.captionColor.black-50=50% Black
+bootstrap4mix_advancedCarouselItem.captionColor.body=Body
 bootstrap4mix_advancedCarouselItem.captionColor.danger=Danger
 bootstrap4mix_advancedCarouselItem.captionColor.dark=Dark
 bootstrap4mix_advancedCarouselItem.captionColor.info=Info
 bootstrap4mix_advancedCarouselItem.captionColor.light=Light
+bootstrap4mix_advancedCarouselItem.captionColor.muted=Muted
 bootstrap4mix_advancedCarouselItem.captionColor.primaryPrimary
 bootstrap4mix_advancedCarouselItem.captionColor.secondary=Secondary
 bootstrap4mix_advancedCarouselItem.captionColor.success=Success
 bootstrap4mix_advancedCarouselItem.captionColor.warning=Warning
+bootstrap4mix_advancedCarouselItem.captionColor.white-50=50% White
+bootstrap4mix_advancedCarouselItem.captionColor.white=White
 bootstrap4mix_advancedCarouselItem.captionColor=Color for caption
 bootstrap4mix_advancedCarouselItem.carouselItemClass=Custom Class(es) to set the slide
+bootstrap4mix_advancedCarouselItem.titleColor.black-50=50% Black
+bootstrap4mix_advancedCarouselItem.titleColor.body=Body
 bootstrap4mix_advancedCarouselItem.titleColor.danger=Danger
 bootstrap4mix_advancedCarouselItem.titleColor.dark=Dark
 bootstrap4mix_advancedCarouselItem.titleColor.info=Info
 bootstrap4mix_advancedCarouselItem.titleColor.light=Light
+bootstrap4mix_advancedCarouselItem.titleColor.muted=Muted
 bootstrap4mix_advancedCarouselItem.titleColor.primary=Primary
 bootstrap4mix_advancedCarouselItem.titleColor.secondary=Secondary
 bootstrap4mix_advancedCarouselItem.titleColor.success=Success
 bootstrap4mix_advancedCarouselItem.titleColor.warning=Warning
+bootstrap4mix_advancedCarouselItem.titleColor.white-50=50% White
+bootstrap4mix_advancedCarouselItem.titleColor.white=White
 bootstrap4mix_advancedCarouselItem.titleColor=Color for Title
 bootstrap4mix_advancedCarouselItem=Advanced settings
 bootstrap4mix_advancedNavbar.addContainerWithinTheNavbar=Add a container within the navbar
@@ -66,6 +76,7 @@ bootstrap4mix_buttonAdvancedSettings.style.warning=Warning
 bootstrap4mix_buttonAdvancedSettings.style=Style
 bootstrap4mix_buttonAdvancedSettings=Advanced settings
 bootstrap4mix_cardAdvancedSettings.cssClass=Class(es) to set on this Card
+bootstrap4mix_cardAdvancedSettings.cardBodyCssClass=Class(es) to set on the Card Body
 bootstrap4mix_cardAdvancedSettings.freeFooter=Allow any content on the footer
 bootstrap4mix_cardAdvancedSettings=Advanced settings
 bootstrap4mix_carouselAdvancedSettings.carouselClass=Custom Class(es) to set the carousel
@@ -87,6 +98,7 @@ bootstrap4mix_colors.backgroundColor.light=Light
 bootstrap4mix_colors.backgroundColor.primary=Primary
 bootstrap4mix_colors.backgroundColor.secondary=Secondary
 bootstrap4mix_colors.backgroundColor.success=Success
+bootstrap4mix_colors.backgroundColor.transparent=Transparent
 bootstrap4mix_colors.backgroundColor.warning=Warning
 bootstrap4mix_colors.backgroundColor.white=White
 bootstrap4mix_colors.backgroundColor=Background
@@ -101,6 +113,8 @@ bootstrap4mix_colors.borderColor.success=Success
 bootstrap4mix_colors.borderColor.warning=Warning
 bootstrap4mix_colors.borderColor.white=White
 bootstrap4mix_colors.borderColor=Border
+bootstrap4mix_colors.textColor.black-50=50% Black
+bootstrap4mix_colors.textColor.body=Body
 bootstrap4mix_colors.textColor.danger=Danger
 bootstrap4mix_colors.textColor.dark=Dark
 bootstrap4mix_colors.textColor.default=Default
@@ -111,6 +125,8 @@ bootstrap4mix_colors.textColor.primary=Primary
 bootstrap4mix_colors.textColor.secondary=Decondary
 bootstrap4mix_colors.textColor.success=Success
 bootstrap4mix_colors.textColor.warning=Warning
+bootstrap4mix_colors.textColor.white-50=50% White
+bootstrap4mix_colors.textColor.white=White
 bootstrap4mix_colors.textColor=Text
 bootstrap4mix_colors=Colors
 bootstrap4mix_createAbsoluteAreas.level.0=0 - Home page
