Prepare for next release

--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,6 @@ OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
     <modules>
         <module>bootstrap4-core</module>
         <module>bootstrap4-components</module>
-        <module>bootstrap4-package</module>
+        <!--<module>bootstrap4-package</module>-->
     </modules>
 </project>
