--- a/bootstrap4-components/pom.xml
+++ b/bootstrap4-components/pom.xml
@@ -23,7 +23,7 @@ OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
   <parent>
     <groupId>org.jahia.modules</groupId>
     <artifactId>bootstrap4-modules</artifactId>
-    <version>1.18</version>
+    <version>1.19-SNAPSHOT</version>
   </parent>
   <artifactId>bootstrap4-components</artifactId>
   <packaging>bundle</packaging>
