--- a/bootstrap4-components/src/main/resources/resources/bootstrap4-components.properties
+++ b/bootstrap4-components/src/main/resources/resources/bootstrap4-components.properties
@@ -30,7 +30,7 @@ bootstrap4mix_advancedCarouselItem.titleColor.white-50=50% White
 bootstrap4mix_advancedCarouselItem.titleColor.white=White
 bootstrap4mix_advancedCarouselItem.titleColor=Color for Title
 bootstrap4mix_advancedCarouselItem=Advanced settings
-bootstrap4mix_advancedNavbar.addContainerWithinTheNavbar=Add a container within the navbar
+bootstrap4mix_advancedNavbar.addContainerWithinTheNavbar=Wrap the content of the navbar in a container to center it on a page
 bootstrap4mix_advancedNavbar.addLoginButton=Add the login button
 bootstrap4mix_advancedNavbar.divClass=Class(es) to set on the navbar div (NAV>DIV)
 bootstrap4mix_advancedNavbar.loginMenuULClass=Class(es) to set on the login menu (UL)
@@ -75,8 +75,8 @@ bootstrap4mix_buttonAdvancedSettings.style.success=Success
 bootstrap4mix_buttonAdvancedSettings.style.warning=Warning
 bootstrap4mix_buttonAdvancedSettings.style=Style
 bootstrap4mix_buttonAdvancedSettings=Advanced settings
-bootstrap4mix_cardAdvancedSettings.cssClass=Class(es) to set on this Card
 bootstrap4mix_cardAdvancedSettings.cardBodyCssClass=Class(es) to set on the Card Body
+bootstrap4mix_cardAdvancedSettings.cssClass=Class(es) to set on this Card
 bootstrap4mix_cardAdvancedSettings.freeFooter=Allow any content on the footer
 bootstrap4mix_cardAdvancedSettings=Advanced settings
 bootstrap4mix_carouselAdvancedSettings.carouselClass=Custom Class(es) to set the carousel
@@ -136,13 +136,13 @@ bootstrap4mix_createAbsoluteAreas.level.3=3
 bootstrap4mix_createAbsoluteAreas.level.4=4
 bootstrap4mix_createAbsoluteAreas.level.5=5
 bootstrap4mix_createAbsoluteAreas.level=Choose level
-bootstrap4mix_createAbsoluteAreas=Create absolute areas
+bootstrap4mix_createAbsoluteAreas=Create Absolute Areas
 bootstrap4mix_createContainer.containerCssClass.ui.tooltip=Optional
 bootstrap4mix_createContainer.containerCssClass=Class(es) set on this container
 bootstrap4mix_createContainer.containerId.ui.tooltip=Optional
 bootstrap4mix_createContainer.containerId=ID set on this container
 bootstrap4mix_createContainer.gridLayout.fixed-width=Fixed width container
-bootstrap4mix_createContainer.gridLayout.full-width=Fluid container
+bootstrap4mix_createContainer.gridLayout.full-width=Fluid container (100% width across all viewport and device sizes)
 bootstrap4mix_createContainer.gridLayout=Grid layout template
 bootstrap4mix_createContainer=Create Container
 bootstrap4mix_createRow.rowCssClass.ui.tooltip=Optional
@@ -161,7 +161,11 @@ bootstrap4mix_createRow.rowVerticalAlignment.align-items-end=End (bottom)
 bootstrap4mix_createRow.rowVerticalAlignment.align-items-start=Start (top)
 bootstrap4mix_createRow.rowVerticalAlignment.default=Default
 bootstrap4mix_createRow.rowVerticalAlignment=Vertical alignment
-bootstrap4mix_createRow=Create row
+bootstrap4mix_createRow.typeOfGrid.customGrid=Custom grid
+bootstrap4mix_createRow.typeOfGrid.nogrid=Create an empty row (no column)
+bootstrap4mix_createRow.typeOfGrid.predefinedGrid=Predefined grid
+bootstrap4mix_createRow.typeOfGrid=Select the type of grid that you want to create
+bootstrap4mix_createRow=Create Row and Columns
 bootstrap4mix_createSection.sectionCssClass.ui.tooltip=Optional
 bootstrap4mix_createSection.sectionCssClass=Class(es) set on this HTML element
 bootstrap4mix_createSection.sectionElement.article=article
@@ -180,7 +184,7 @@ bootstrap4mix_createSection.sectionId.ui.tooltip=Optional
 bootstrap4mix_createSection.sectionId=ID set on this HTML element
 bootstrap4mix_createSection.sectionRole=Role
 bootstrap4mix_createSection.sectionStyle=Style
-bootstrap4mix_createSection=Create Section
+bootstrap4mix_createSection=Create HTML5 Semantic Elements
 bootstrap4mix_customBaseNavbar.label.contribute=Contribute
 bootstrap4mix_customBaseNavbar.label.edit=Edit
 bootstrap4mix_customBaseNavbar.label.live=Live
@@ -194,7 +198,7 @@ bootstrap4mix_customButtonNavbar.buttonClass=Class(es) to set on the button
 bootstrap4mix_customButtonNavbar=Customize button
 bootstrap4mix_customGrid.gridClasses.ui.tooltip=Separate classes with coma
 bootstrap4mix_customGrid.gridClasses=Set of grid classes
-bootstrap4mix_customGrid=Custom
+bootstrap4mix_customGrid=Custom grid
 bootstrap4mix_externalLink.externalLink=URL
 bootstrap4mix_externalLink=URL
 bootstrap4mix_figureAdvancedSettings.captionAlignment.text-center=Center
@@ -209,14 +213,18 @@ bootstrap4mix_imageAdvancedSettings.align.default=Default
 bootstrap4mix_imageAdvancedSettings.align.left=Left
 bootstrap4mix_imageAdvancedSettings.align.right=Right
 bootstrap4mix_imageAdvancedSettings.align=Alignment
-bootstrap4mix_imageAdvancedSettings.borderRadius.rounded-0=Default (No radius)
+bootstrap4mix_imageAdvancedSettings.borderRadius.rounded-0=No radiusa
 bootstrap4mix_imageAdvancedSettings.borderRadius.rounded-bottom=Only on bottom
 bootstrap4mix_imageAdvancedSettings.borderRadius.rounded-circle=Circle
 bootstrap4mix_imageAdvancedSettings.borderRadius.rounded-left=Only on left
 bootstrap4mix_imageAdvancedSettings.borderRadius.rounded-right=Only on right
 bootstrap4mix_imageAdvancedSettings.borderRadius.rounded-top=Only on top
 bootstrap4mix_imageAdvancedSettings.borderRadius.rounded=Rounded
-bootstrap4mix_imageAdvancedSettings.borderRadius=Border radius
+bootstrap4mix_imageAdvancedSettings.borderRadius=Border-radius
+bootstrap4mix_imageAdvancedSettings.borderRadiusSize.default=Default
+bootstrap4mix_imageAdvancedSettings.borderRadiusSize.rounded-lg=Larger
+bootstrap4mix_imageAdvancedSettings.borderRadiusSize.rounded-sm=Smaller
+bootstrap4mix_imageAdvancedSettings.borderRadiusSize=Border-radius size
 bootstrap4mix_imageAdvancedSettings.imageClass=Class(es) to set on this image
 bootstrap4mix_imageAdvancedSettings.imageID=ID to set on this image
 bootstrap4mix_imageAdvancedSettings.imageStyle=Style(s) to set on this image
@@ -295,8 +303,8 @@ bootstrap4mix_predefinedGrid.grid.4_8=4 / 8
 bootstrap4mix_predefinedGrid.grid.6_6=6 / 6
 bootstrap4mix_predefinedGrid.grid.8_4=8 / 4
 bootstrap4mix_predefinedGrid.grid.9_3=9 / 3
-bootstrap4mix_predefinedGrid.grid=Select a predifined grid
-bootstrap4mix_predefinedGrid=Predefined
+bootstrap4mix_predefinedGrid.grid=Select a predefined grid
+bootstrap4mix_predefinedGrid=Predefined grid
 bootstrap4mix_siteBrand.brandImage=Brand image
 bootstrap4mix_siteBrand.brandText=Brand text
 bootstrap4mix_siteBrand=Brand
@@ -311,7 +319,7 @@ bootstrap4nt_button.buttonType.popover=Popover
 bootstrap4nt_button.buttonType=Action
 bootstrap4nt_button.close=Close
 bootstrap4nt_button.noLink=Oops: Could not found a working link for this button!
-bootstrap4nt_button.noUrl=Oops: Could not found any URL for this button!
+bootstrap4nt_button.noUrl=Oops: Could not find any URL for this button!
 bootstrap4nt_button.readMore=Read more
 bootstrap4nt_button=Button
 bootstrap4nt_card.footer=Footer
@@ -337,12 +345,8 @@ bootstrap4nt_figure=Figure
 bootstrap4nt_grid.absolute.area.desc= Define area for level {0}.
 bootstrap4nt_grid.absolute.area.title=Absolute Area
 bootstrap4nt_grid.couldNotDisplayGrid=Could not display custom grid {0}.
-bootstrap4nt_grid.gridType.customGrid=Custom
-bootstrap4nt_grid.gridType.nogrid=No grid
-bootstrap4nt_grid.gridType.predefinedGrid=Predefined
-bootstrap4nt_grid.gridType=Type
-bootstrap4nt_grid.warning=Warning !
-bootstrap4nt_grid=Grid
+bootstrap4nt_grid.warning=Warning!
+bootstrap4nt_grid=Layout and Grid
 bootstrap4nt_mediaObject=Media object
 bootstrap4nt_navbar.root.currentPage=Current page
 bootstrap4nt_navbar.root.homePage=Home
