--- a/bootstrap4-components/pom.xml
+++ b/bootstrap4-components/pom.xml
@@ -23,7 +23,7 @@ OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
   <parent>
     <groupId>org.jahia.modules</groupId>
     <artifactId>bootstrap4-modules</artifactId>
-    <version>2.0.3-SNAPSHOT</version>
+    <version>2.2.0</version>
   </parent>
   <artifactId>bootstrap4-components</artifactId>
   <packaging>bundle</packaging>
